--- a/app/views/cats/index.js.erb
+++ b/app/views/cats/index.js.erb
@@ -2,4 +2,4 @@ function replaceKittens (innerHTML) {
   const kittens = document.getElementById('kittens');
   kittens.innerHTML = innerHTML;
 }
-replaceKittens("<%= j render 'kitten', kittens: @kittens'} %>");
+replaceKittens("<%= j render 'kitten', kittens: @kittens %>");
