--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -166,7 +166,7 @@
         <div class="row btn-wrapper">
         <%= link_to cats_path, class:"waves-effect waves-light btn-large" do %>
           See all kittens
-          <i class="material-icons right">explore</i>
+          <i class="fas fa-cat"></i>
         <% end %>
         </div>
       </div>
