--- a/app/views/users/cattery_overview.html.erb
+++ b/app/views/users/cattery_overview.html.erb
@@ -24,7 +24,7 @@
               <div class="card">
                 <div class="card-image">
                   <a href="#">
-                    <%= image_tag(cat.card_picture) if cat.card_picture.attached? %> 
+                    <%= image_tag(cat.thumbnail) if cat.card_picture.attached? %> 
                     <span class="card-title"><%= cat.name %></span>
                   </a>
                   <%= link_to edit_cat_path(cat, form: "parent"), class:"btn-floating halfway-fab waves-effect waves-light btn-large" do %>
@@ -133,10 +133,10 @@
                 </div>
                 <a href="#">
                   <div class="card-image" id="<%= pair.id %><%= pair.male.id %>" >
-                    <%= image_tag(pair.male.card_picture, :alt => "breed") %>
+                    <%= image_tag(pair.male.thumbnail, :alt => "breed") if pair.male.card_picture.attached? %>
                   </div>
                   <div class="card-image" id="<%= pair.id %><%= pair.female.id %>" >
-                    <%= image_tag(pair.female.card_picture, :alt => "breed") %>
+                    <%= image_tag(pair.female.thumbnail, :alt => "breed") if pair.female.card_picture.attached? %>
                   </div>
                 </a>
                 <div class="card-content">
@@ -216,7 +216,7 @@
               <div class="card">
                 <div class="card-image">
                   <a href="#">
-                    <%= image_tag(cat.card_picture, :alt => "card picture") %>
+                    <%= image_tag(cat.thumbnail, :alt => "card picture") if cat.card_picture.attached? %>
                     <% if !cat.name.blank? %>
                       <span class="card-title"><%= cat.name %></span>
                     <% end %>
