--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -5,6 +5,9 @@
     </div>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <% resource.errors.full_messages.each do |message|%>
+        <span><%= message %></span>
+      <% end %>
       <div class="row">    
         <br>   
       </div>
