--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -164,7 +164,7 @@
           <% end %>
         </div>
         <div class="row btn-wrapper">
-        <%= link_to cats_path, class:"waves-effect waves-light btn-large" do %>
+        <%= link_to cats_path(anchor: "kittens"), class:"waves-effect waves-light btn-large" do %>
           See all kittens
           <i class="fas fa-cat"></i>
         <% end %>
