--- a/app/views/cats/_search.html.erb
+++ b/app/views/cats/_search.html.erb
@@ -2,13 +2,19 @@
   <div class="container">
     <%= form_with(url: {:controller => locals[:controller], :action => locals[:action]}, method: "GET") do |f| %>
       <div class="row">
-        <div class="col s12 m4 offset-m1">
+        <div class="col s10 offset-s1 m4 offset-m1">
           <div class="input-field">
-            <%= f.select(:breeds, options_for_select(@all_breeds_array, selected: f.object ? f.object.breeds : ""), {disabled: "", prompt: 'Which breed(s) are you looking for?'}, {:multiple => true, class:"form-check-input"}) %>
+            <button class="reset-dropdown circle">
+              <i class="material-icons">restore</i>
+            </button>
+            <%= f.select(:breeds, options_for_select(@all_breeds_array), {disabled: "", prompt: 'Which breed(s) are you looking for?'}, {:multiple => true, class:"form-check-input"}) %>
           </div>
         </div>
-        <div class="col s12 m4 offset-m2">
+        <div class="col s10 offset-s1 m4 offset-m2">
           <div class="input-field">
+            <button class="reset-dropdown circle">
+              <i class="material-icons">restore</i>
+            </button>
             <%= f.select(:locations, options_for_select(@all_locations_array), {disabled: "", prompt: 'Which location(s) do you prefer?'}, {:multiple => true, class:"form-check-input"}) %>
           </div>
         </div>
