--- a/app/views/cats/_search.html.erb
+++ b/app/views/cats/_search.html.erb
@@ -1,24 +1,20 @@
-<div class="search-bar">
-  <div class="container">
-    <%= form_with(url: {:controller => locals[:controller], :action => locals[:action]}, method: "GET") do |f| %>
-      <div class="row">
-        <div class="col s10 offset-s1 m4 offset-m1">
-          <div class="input-field">
-            <button class="reset-dropdown circle">
-              <i class="material-icons">restore</i>
-            </button>
-            <%= f.select(:breeds, options_for_select(@all_breeds_array), {disabled: "", prompt: 'Which breed(s) are you looking for?'}, {:multiple => true, class:"form-check-input"}) %>
-          </div>
-        </div>
-        <div class="col s10 offset-s1 m4 offset-m2">
-          <div class="input-field">
-            <button class="reset-dropdown circle">
-              <i class="material-icons">restore</i>
-            </button>
-            <%= f.select(:locations, options_for_select(@all_locations_array), {disabled: "", prompt: 'Which location(s) do you prefer?'}, {:multiple => true, class:"form-check-input"}) %>
-          </div>
-        </div>
+<%= form_with(url: {:controller => locals[:controller], :action => locals[:action]}, method: "GET") do |f| %>
+  <div class="row">
+    <div class="col s10 offset-s1 m4 offset-m1">
+      <div class="input-field">
+        <button class="reset-dropdown circle">
+          <i class="material-icons">restore</i>
+        </button>
+        <%= f.select(:breeds, options_for_select(@all_available_breeds_array), {disabled: "", prompt: 'Which breed(s) are you looking for?'}, {:multiple => true, class:"form-filter", id: "breeds"}) %>
       </div>
-    <% end %>
+    </div>
+    <div class="col s10 offset-s1 m4 offset-m2">
+      <div class="input-field">
+        <button class="reset-dropdown circle">
+          <i class="material-icons">restore</i>
+        </button>
+        <%= f.select(:locations, options_for_select(@all_available_locations_array), {disabled: "", prompt: 'Which location(s) do you prefer?'}, {:multiple => true, class:"form-filter"}) %>
+      </div>
+    </div>
   </div>
-</div>
+<% end %>
