--- a/app/views/users/cattery_overview.html.erb
+++ b/app/views/users/cattery_overview.html.erb
@@ -111,7 +111,7 @@
             <% end %>
           <% else %>
             <a class="disabled-tooltip-wrapper tooltipped right" data-position="top" data-tooltip="You have to create a male and female parent before you can create a pair">
-              <button class="btn waves-effect waves-light btn-delete disabled right">
+              <button class="btn disabled right">
                 <span>Add pair</span>
                 <i class="material-icons left">add</i>
               </button>
