--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -8,7 +8,7 @@
   </div>
 
   <div class="container">
-    <% if @kittens.any? %>
+    <% if @kittens.exists? %>
       <div id="kittens" class="row">
         <%= render 'kitten', kittens: @kittens %>
       </div>
