Added pagination and infinite scroll on kittens index

--- a/app/views/cats/_page_items.html.erb
+++ b/app/views/cats/_page_items.html.erb
@@ -1,4 +1,4 @@
-<% kittens.each do |cat| %>
+<% @kittens.each do |cat| %>
   <div class="col s10 offset-s1 m6 l3">
     <a href="#">
       <div class="card">
