--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -219,20 +219,20 @@
 
 <div class="row">
   <div class="col">
-    <%= link_to cattery_overview_path, class:"waves-effect waves-light btn left" do %>
+    <%= link_to overview_cattery_path(@user), class:"waves-effect waves-light btn left" do %>
       <i class="material-icons left">keyboard_arrow_left</i>
       Back
     <% end %>
   </div>
   <% if !@cat.new_record? %>
-      <% if parent_litters_count(@cat) == 0 and parent_kittens_count(@cat) == 0 and @cat.pairs.size == 0%>
+      <% if parent_litters_count(@cat) == 0 and parent_kittens_count(@cat) == 0 and @cat.pairs.size == 0 %>
         <div class="col right">
-          <a class="btn waves-effect waves-light btn-delete modal-trigger" href="#modal1">
+          <a class="btn waves-effect waves-light btn-delete modal-trigger" href="#modal-delete">
             <span>Delete</span>
             <i class="material-icons right">delete</i>
           </a>
         </div>
-        <div id="modal1" class="modal modal-confirmation">
+        <div id="modal-delete" class="modal modal-confirmation">
           <div class="modal-content">
             <h4>Delete <%= @form %></h4>
             <p>Are you sure?</p>
